--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <p>Welcome to the <strong>We Think You Should Hear This Podcast</strong>. This podcast explores the thoughts and opinions of two very normal people who sometimes have no clue what they're talking about.</p>
 
-<p>Subscribe on <a href="https://podcasts.apple.com/us/podcast/infusing-computing-webseries/id1493135678?mt=2">iTunes</a>, <a href="https://podcasters.spotify.com/podcast/4ZVznSTiY6PxQu0rQH6Hpu/overview/">Spotify</a>, <a href="https://play.google.com/music/listen?u=0#/ps/Iyrpoaswrrtwm4yajqxj2d3wkyy/">Google Play Music</a> or the podcast catcher of your choice.</p>
+<p>Subscribe on <a href="#">iTunes</a>, <a href="">Spotify</a>, <a href="#">Google Play Music</a> or the podcast catcher of your choice.</p>
 
-<p>You can also review all episodes <a href="https://archive.org/details/infusingcomputing/">here.</a></p>
+<p>You can also review all episodes <a href="#">here.</a></p>
 <div class="card-grid">
 <!--     -->
 
